syntax = "proto3";

package rti;

message RequestCancelAllOrders
	{                                
	// PB_OFFSET = 100000, is the offset added for each MNM field id

        enum OrderPlacement {
ORDERPLACEMENT_UNSPECIFIED = 0;
	                     MANUAL  = 1;
			     AUTO    = 2;
	                    }


	enum UserType {
		      USER_TYPE_ADMIN  = 0;
	              USER_TYPE_FCM    = 1;
		      USER_TYPE_IB     = 2;
		      USER_TYPE_TRADER = 3;
	              }


	 int32             template_id         = 154467;    // PB_OFFSET + MNM_TEMPLATE_ID
	repeated  string            user_msg            = 132760;    // PB_OFFSET + MNM_USER_MSG

	string            fcm_id              = 154013;    // PB_OFFSET + MNM_FCM_ID
	string            ib_id               = 154014;    // PB_OFFSET + MNM_IB_ID
	string            account_id          = 154008;    // PB_OFFSET + MNM_ACCOUNT_ID

	UserType          user_type           = 154036;    // PB_OFFSET + MNM_USER_TYPE
	OrderPlacement    manual_or_auto      = 154710;    // PB_OFFSET + MNM_MANUAL_OR_AUTO
	}
