syntax = "proto3";

package rti;

message ResponseShowBrackets
	{       
	// PB_OFFSET = 100000, is the offset added for each MNM field id

	int32    template_id              = 154467;    // PB_OFFSET + MNM_TEMPLATE_ID
	repeated string   user_msg                 = 132760;    // PB_OFFSET + MNM_USER_MSG	
	repeated string   rq_handler_rp_code       = 132764;    // PB_OFFSET + MNM_REQUEST_HANDLER_RESPONSE_CODE
	repeated string   rp_code                  = 132766;    // PB_OFFSET + MNM_RESPONSE_CODE

	string   basket_id                = 110300;    // PB_OFFSET + MNM_BASKET_ID
	string   target_quantity          = 154457;    // PB_OFFSET + MNM_TARGET_QUANTITY
	string   target_quantity_released = 154460;    // PB_OFFSET + MNM_TARGET_QUANTITY_RELEASED
	string   target_ticks             = 154456;    // PB_OFFSET + MNM_TARGET_TICKS
	}
